<resources>
    <string name="app_name">TechBox</string>
    <string name="action_settings">Settings</string>
    <string name="loginTitle">Welcome</string>
    <string name="name">Name</string>
    <string name="passWord">Password</string>
    <string name="button">Login</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="edit">edit</string>
    <string name="back">back</string>
    <string name="data_request_text">数据请求</string>
    <string name="string_request">String请求</string>
    <string name="json_request">Json请求</string>

    <string name="image_request_text">图片请求</string>
    <string name="image_request">Image请求</string>
    <string name="image_loader">ImageLoader</string>
    <string name="network_image_view">NetworkImageView</string>

    <string name="custom_request_text">自定义请求</string>
    <string name="xml_request">Xml请求 </string>
    <string name="post_request_text">post请求</string>
    <string name="post_request">post请求</string>
    <string name="action_about">关于</string>
    <string name="about_text">
    </string>
    <string name="request_url_hint">请输入请求地址</string>
    <string name="request_send">发送</string>
    <string name="request_fail_text">请求失败2</string>
    <string name="request_fail_text1">请求失败1</string>
    <string name="request_params_text">参数格式:key=value，多个参数用 ; 分隔</string>
    <string name="main_pager">最新动态</string>
    <string name="daily_android_tag_tv">Android</string>
    <string name="daily_ios_tag_tv">iOS</string>
    <string name="daily_js_tag_tv">前端</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="pull_to_refresh_pull_label" translatable="false">下拉刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_update_time_label" translatable="false">上次更新时间 </string>
    <string name="pull_to_refresh_load_label" translatable="false">上拉加载更多</string>
    <string name="load_mode_label" translatable="false">加载更多</string>
</resources>
